Prefix version with 'v' in release title

--- a/azure-pipelines-official.yml
+++ b/azure-pipelines-official.yml
@@ -135,7 +135,7 @@ stages:
         gitHubConnection: 'GitHub Connection (Jonko)'
         tagSource: userSpecifiedTag
         tag: '$(Version)'
-        title: 'Serial Loops $(Version)'
+        title: 'Serial Loops v$(Version)'
         releaseNotesSource: inline
         releaseNotesInline: 'Latest build based on main!'
         isPreRelease: true
