--- a/src/SerialLoops.Gtk/SerialLoops.Gtk.csproj
+++ b/src/SerialLoops.Gtk/SerialLoops.Gtk.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 	
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
@@ -6,6 +6,16 @@
     <AllowUnsafeBlocks>True</AllowUnsafeBlocks>
     <AssemblyName>SerialLoops</AssemblyName>
   </PropertyGroup>
+	
+  <ItemGroup>
+    <None Remove="AppIcon.png" />
+  </ItemGroup>
+	
+  <ItemGroup>
+    <EmbeddedResource Include="AppIcon.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </EmbeddedResource>
+  </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\SerialLoops\SerialLoops.csproj" />
