--- a/azure-pipelines-official.yml
+++ b/azure-pipelines-official.yml
@@ -172,7 +172,16 @@ stages:
         releaseNotesInline: |
           Latest build from main. Note that this is likely to have bugs and we recommend you use a regular release instead!
 
+          ## Installation Notes
           On macOS, after dragging the app from the dmg into Applications, please run `xattr -cr /Applications/SerialLoops.Mac.app` from the Terminal in order to be able to run the app.
 
-          The `.deb` package can only be used on Debian-based systems (e.g. Ubuntu).
+          The `.deb` package can only be used on Debian-based systems (e.g. Ubuntu). Install it with `sudo dpkg -i SerialLoops-$(Version)_amd64.deb`. For other Linux distros, please use the
+          binaries packaged in the `.tar.gz` archive. Regardless of your distro, ensure you install the OpenAL binaries so audio playback works &ndash; on Ubuntu, this can be done with
+          `sudo apt install libopenal-dev`.
+
+          Please ensure you have installed [devkitARM from devkitPro](https://devkitpro.org/wiki/Getting_Started) before using the program.
+
+          ### Which macOS dmg should I choose?
+          If your Mac is newer, you will probably want the ARM dmg. If it is older, you will want the x64 one. If unsure, download the ARM one first and attempt to run it &ndash; it will throw
+          an error saying it can't be run on this computer if your computer is not able to run it. If that's the case, download the x64 one instead.
         isPreRelease: true
