--- a/azure-pipelines-official.yml
+++ b/azure-pipelines-official.yml
@@ -174,6 +174,7 @@ stages:
 
           ## Installation Notes
           On macOS, after dragging the app from the dmg into Applications, please run `xattr -cr /Applications/SerialLoops.Mac.app` from the Terminal in order to be able to run the app.
+          This is required because we currently don't codesign the application, meaning macOS will refuse to run it without explicit approval from you.
 
           The `.deb` package can only be used on Debian-based systems (e.g. Ubuntu). Install it with `sudo dpkg -i SerialLoops-$(Version)_amd64.deb`. For other Linux distros, please use the
           binaries packaged in the `.tar.gz` archive. Regardless of your distro, ensure you install the OpenAL binaries so audio playback works &ndash; on Ubuntu, this can be done with
